tests/error/struct_errors/invalid_attribute_assign1.err
Error: Attribute not found (at $FILE:12:6)
   | 
10 | @guppy
11 | def foo(s: MyStruct) -> None:
12 |     s.z = 2
   |       ^ `MyStruct` has no attribute `z`

Guppy compilation failed due to 1 previous error
